--- a/lang/en.json
+++ b/lang/en.json
@@ -50,7 +50,9 @@
             "Are you sure you want to delete this channel? All data will be removed permanently.":                                              "Are you sure you want to delete this channel? All data will be removed permanently.",
             "Are you sure you want to delete this episode?":                                                                                    "Are you sure you want to delete this episode?",
             "Are you sure you want to delete this title?":                                                                                      "Are you sure you want to delete this title?",
-            "Unsaved changes will be lost, are you sure you want to leave?":                                                                    "Unsaved changes will be lost, are you sure you want to leave?"
+            "Are you sure you want to delete this POI with interactive event?":                                                                 "Are you sure you want to delete this POI with interactive event?",
+            "Unsaved changes will be lost, are you sure you want to leave?":                                                                    "Unsaved changes will be lost, are you sure you want to leave?",
+            "Unsaved changes will be lost, are you sure you want to cancel editing?":                                                           "Unsaved changes will be lost, are you sure you want to cancel editing?"
         },
         "notice": {
             "New episode has been created as a draft!":                                                                                         "New episode has been created as a draft!",
@@ -80,9 +82,11 @@
             "Delete":                                                                                                                           "Delete",
             "No":                                                                                                                               "No",
             "Leave":                                                                                                                            "Leave",
+            "Yes":                                                                                                                              "Yes",
             "Disconnect":                                                                                                                       "Disconnect",
             "{No}":                                                                                                                             "No",
-            "Restart connection":                                                                                                               "Restart connection"
+            "Restart connection":                                                                                                               "Restart connection",
+            "{Close}":                                                                                                                          "<img src=\"images/icon_zoom.png\" alt=\"\" />Close"
         }
     },
     "upload": {
@@ -167,7 +171,7 @@
             "Worldwide":                                                                                                                        "Worldwide",
             "Category":                                                                                                                         "Category",
             "Select a category":                                                                                                                "Select a category",
-            "Tag":                                                                                                                              "Tag",
+            "Tags":                                                                                                                             "Tags",
             "Separate with commas":                                                                                                             "Separate with commas",
             "Suggested Tags:":                                                                                                                  "Suggested Tags:",
             "Auto share new published episode":                                                                                                 "Auto share new published episode",
@@ -197,6 +201,7 @@
             "Curate a new episode":                                                                                                             "Curate a new episode",
             "Reorder episodes":                                                                                                                 "Reorder episodes",
             "Save order":                                                                                                                       "Save order",
+            "No.":                                                                                                                              "No.",
             "Episode":                                                                                                                          "Episode",
             "Scheduled time":                                                                                                                   "Scheduled time",
             "Publish time":                                                                                                                     "Publish time",
@@ -262,6 +267,7 @@
         "epcurate-form": {
             "Add Video":                                                                                                                        "Add Video",
             "Edit":                                                                                                                             "Edit",
+            "POI & interactive event":                                                                                                          "POI & interactive event",
             "Add video by URL":                                                                                                                 "Add video by URL",
             "Add":                                                                                                                              "Add",
             "+ Add videos here":                                                                                                                "+ Add videos here",
@@ -276,7 +282,8 @@
             "Invalid URL, please try again.":                                                                                                   "Invalid URL, please try again.",
             "Invalid URL, please try again!":                                                                                                   "Invalid URL, please try again!",
             "Fail to add this video, please try another one.<br />[This video is not playable outside Youtube]":                                "Fail to add this video, please try another one.<br />[This video is not playable outside Youtube]",
-            "Fail to add this video, please try another one.<br />[This video is not playable on mobile device]":                               "Fail to add this video, please try another one.<br />[This video is not playable on mobile device]"
+            "Fail to add this video, please try another one.<br />[This video is not playable on mobile device]":                               "Fail to add this video, please try another one.<br />[This video is not playable on mobile device]",
+            "Fail to add this video, please try another one.<br />[This is a private video]":                                                   "Fail to add this video, please try another one.<br />[This is a private video]"
         },
         "video-info": {
             "Original":                                                                                                                         "Original",
@@ -288,6 +295,7 @@
             "Not playable on mobile device":                                                                                                    "Not playable on mobile device"
         },
         "trim-time": {
+            "Playback time":                                                                                                                    "Playback time",
             "Start from:":                                                                                                                      "Start from:",
             "To:":                                                                                                                              "To:",
             "Duration:":                                                                                                                        "Duration:",
@@ -295,6 +303,44 @@
             "Edit":                                                                                                                             "Edit",
             "Cancel":                                                                                                                           "Cancel",
             "Done":                                                                                                                             "Done"
+        },
+        "poi-event": {
+            "Add POI & interactive event":                                                                                                      "Add POI & interactive event",
+            "+ Add":                                                                                                                            "+ Add",
+            "Edit POI & interactive event":                                                                                                     "Edit POI & interactive event",
+            "Add an interactive event and call to action message at a point of interaction.":                                                   "Add an interactive event and call to action message at a point of interaction.",
+            "Edit":                                                                                                                             "Edit",
+            "Create POI":                                                                                                                       "Create POI",
+            "Add interactive event":                                                                                                            "Add interactive event",
+            "Required field":                                                                                                                   "Required field",
+            "Name":                                                                                                                             "Name",
+            "Duration":                                                                                                                         "Duration",
+            "Start from:":                                                                                                                      "Start from:",
+            "To:":                                                                                                                              "To:",
+            "Reset":                                                                                                                            "Reset",
+            "Invalid time, please try again.":                                                                                                  "Invalid time, please try again.",
+            "Tags":                                                                                                                             "Tags",
+            "Separate with commas":                                                                                                             "Separate with commas",
+            "Cancel":                                                                                                                           "Cancel",
+            "Next":                                                                                                                             "Next",
+            "Please fill in all required fields.":                                                                                              "Please fill in all required fields.",
+            "Start time or end time is not in the video playback time:":                                                                        "Start time or end time is not in the video playback time:",
+            "Duration overlaps another POI's duration:":                                                                                        "Duration overlaps another POI's duration:",
+            "Zoom in":                                                                                                                          "Zoom in",
+            "Type":                                                                                                                             "Type",
+            "Hyper channel":                                                                                                                    "Hyper channel",
+            "User can go to watch another 9x9.tv channel or episode.":                                                                          "User can go to watch another 9x9.tv channel or episode.",
+            "Display text":                                                                                                                     "Display text",
+            "Hyper to related channel to watch more!":                                                                                          "Hyper to related channel to watch more!",
+            "Button text":                                                                                                                      "Button text",
+            "Watch now":                                                                                                                        "Watch now",
+            "Hyper channel URL":                                                                                                                "Hyper channel URL",
+            "Input 9x9 channel or episode URL":                                                                                                 "Input 9x9 channel or episode URL",
+            "Invalid 9x9 URL, please try again.":                                                                                               "Invalid 9x9 URL, please try again.",
+            "Add":                                                                                                                              "Add",
+            "POI":                                                                                                                              "POI",
+            "Interactive event":                                                                                                                "Interactive event",
+            "Save":                                                                                                                             "Save"
         },
         "title-card": {
             "Text":                                                                                                                             "Text",
@@ -338,7 +384,9 @@
             "Not playable on mobile device":                                                                                                    "Not playable on mobile device",
             "Edit Title":                                                                                                                       "Edit Title",
             "Add Title":                                                                                                                        "Add Title",
-            "Invalid Video":                                                                                                                    "Invalid Video"
+            "Invalid video":                                                                                                                    "Invalid video",
+            "Non-embeddable video":                                                                                                             "Non-embeddable video",
+            "Private video":                                                                                                                    "Private video"
         }
     }
 }
