--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,7 @@
     "studio-nav": {
         "Studio":                                                                                                                               "<span class=\"cms-icon\">CMS</span><p class=\"sub-title\">Content Management System</p>",
         "My Channels":                                                                                                                          "My Channels",
+        "My Portal":                                                                                                                          "My Portal",
         "Studio Setup":                                                                                                                         "<img src=\"images/icon_studio_setup.png\" alt=\"\" />CMS Setup",
         "Connection is inactive, click to restart it.":                                                                                         "Connection is inactive, click to restart it."
     },
@@ -124,6 +125,38 @@
         
         
     },
+     "portal-set": {
+        "html-title": {
+            "9x9.tv - My Channels":                                                                                                             "9x9.tv - 我的頻道"
+        },
+	    "func-nav": {
+	        "Portal": "Portal",
+	        "Channel Store": "Channel Store",
+	        "Brand": "Brand"
+	    },
+	    "sets-list": {
+	        "Channels": "Channels",
+	        "Add Channels": "Add channels",
+	        "Edit": "Edit"
+	    },
+        "title-func": {
+            "My Portal": "My Portal",
+            "Reorder channels":                                                                                                                 "排序頻道",
+            "Save order":                                                                                                                       "儲存排序"
+        },
+        "channel-list": {
+            "Episodes":                                                                                                                         "節目",
+            "Followers":                                                                                                                        "粉絲",
+            "Views":                                                                                                                            "觀看次數",
+            "Update:":                                                                                                                          "更新:",
+            "Curate a new episode":                                                                                                             "策展新節目",
+            "Episode list":                                                                                                                     "節目列表",
+            "Channel settings":                                                                                                                 "頻道設定",
+            "Delete this channel":                                                                                                              "刪除頻道",
+            "No Episodes":                                                                                                                      "無節目",
+            "'s Favorite":                                                                                                                      "的最愛"
+        }
+    },    
     "index": {
         "html-title": {
             "9x9.tv - My Channels":                                                                                                             "9x9.tv - My Channels"
